--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,16 @@
 {
-    "functions": {
-        "public/*.php": {
-            "runtime": "vercel-php@0.6.1",
-            "memory": 1024,
-            "maxDuration": 10
-        }
-    },
+    "version": 2,
+    "name": "one-dashboard-be",
+    "builds": [
+      {
+        "src": "public/index.php",
+        "use": "@vercel/php"
+      }
+    ],
     "routes": [
-        {
-            "src": "/favicon.ico",
-            "headers": {
-                "Cache-Control": "public, max-age=31556952, immutable"
-            },
-            "dest": "/public/favicon.ico"
-        },
-        {
-            "src": "/robots.txt",
-            "headers": {
-                "Cache-Control": "public, max-age=31556952, immutable"
-            },
-            "dest": "/public/robots.txt"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/public/index.php"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "public/index.php"
+      }
     ]
-}
+  }
