--- a/package.json
+++ b/package.json
@@ -2,12 +2,25 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+      "dev": "vite",
+      "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+      "axios": "^1.6.4",
+      "laravel-vite-plugin": "^1.0",
+      "vite": "^5.0"
+    },
+    "name": "one-dashboard-be",
+    "description": "One Dashboard RESTful API to manage products.",
+    "version": "1.0.0",
+    "main": "vite.config.js",
+    "directories": {
+      "test": "tests"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+      "vercel-php": "^0.3.6"
     }
-}
+  }
+  
