--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,53 @@
 {
-    "version": 2,
-    "name": "one-dashboard-be",
-    "builds": [
-      {
-        "src": "public/index.php",
-        "use": "@vercel/php"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "public/index.php"
-      }
-    ]
+  "version": 2,
+    "framework": null,
+  "functions": {
+      "api/index.php": { "runtime": "vercel-php@0.3.6" }
+  },
+  "routes": [{
+      "src": "/(.*)",
+      "dest": "/api/index.php"
+  }],
+  "env": {
+      "APP_NAME": "Laravel",
+      "APP_ENV": "local",
+      "APP_KEY": "base64:0SGD5JgAydH7Iycv9GcYkS+h9I8xbzMK3Zf+L2Im7Ko: ",
+      "APP_DEBUG": "true",
+      "APP_TIMEZONE": "UTC",
+      "APP_URL": "http://localhost:8080",
+      "API_VERSION": "v1",
+
+      "APP_LOCALE": "en",
+      "APP_FALLBACK_LOCALE": "en",
+      "APP_FAKER_LOCALE": "en_US",
+
+      "APP_MAINTENANCE_DRIVER": "file",
+      "APP_MAINTENANCE_STORE": "database",
+
+      "BCRYPT_ROUNDS": "12",
+
+      "LOG_CHANNEL": "stack",
+      "LOG_STACK": "daily",
+      "LOG_DEPRECATIONS_CHANNEL": "null",
+      "LOG_LEVEL": "debug",
+
+      "DB_CONNECTION": "postgres",
+      "DB_HOST": "aws-0-us-east-1.pooler.supabase.com",
+      "DB_PORT": "6543",
+      "DB_DATABASE": "postgres",
+      "DB_USERNAME": "postgres.iscatgawvvikhyunxmmv",
+      "DB_PASSWORD": "oneDashboard123#",
+
+      "SESSION_DRIVER": "database",
+      "SESSION_LIFETIME": "120",
+      "SESSION_ENCRYPT": "false",
+      "SESSION_PATH": "/",
+      "SESSION_DOMAIN": "null",
+
+      "BROADCAST_CONNECTION": "log",
+      "FILESYSTEM_DISK": "public",
+      "QUEUE_CONNECTION": "database",
+
+      "CACHE_STORE": "database"
   }
+}
