--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,7 @@
     "APP_MAINTENANCE_STORE": "database",
     "BCRYPT_ROUNDS": "12",
     "LOG_CHANNEL": "stack",
-    "LOG_STACK": "daily",
+    "LOG_STACK": "single_tmp",
     "LOG_DEPRECATIONS_CHANNEL": "null",
     "LOG_LEVEL": "debug",
     "DB_CONNECTION": "postgres",
