--- a/vercel.json
+++ b/vercel.json
@@ -44,6 +44,6 @@
     "BROADCAST_CONNECTION": "log",
     "FILESYSTEM_DISK": "public",
     "QUEUE_CONNECTION": "database",
-    "CACHE_STORE": "database"
+    "CACHE_STORE": "array"
   }
 }
