--- a/vercel.json
+++ b/vercel.json
@@ -20,30 +20,42 @@
     "APP_TIMEZONE": "UTC",
     "APP_URL": "https://one-dashboard-be.vercel.app",
     "API_VERSION": "v1",
+
     "APP_LOCALE": "en",
     "APP_FALLBACK_LOCALE": "en",
     "APP_FAKER_LOCALE": "en_US",
     "APP_MAINTENANCE_DRIVER": "file",
     "APP_MAINTENANCE_STORE": "database",
+
     "BCRYPT_ROUNDS": "12",
-    "LOG_CHANNEL": "stack",
-    "LOG_STACK": "single_tmp",
-    "LOG_DEPRECATIONS_CHANNEL": "null",
+
+    "LOG_CHANNEL": "stderr",
     "LOG_LEVEL": "debug",
+
     "DB_CONNECTION": "postgres",
     "DB_HOST": "aws-0-us-east-1.pooler.supabase.com",
     "DB_PORT": "6543",
     "DB_DATABASE": "postgres",
     "DB_USERNAME": "postgres.iscatgawvvikhyunxmmv",
     "DB_PASSWORD": "oneDashboard123#",
-    "SESSION_DRIVER": "database",
+
+    "SESSION_DRIVER": "cookie",
     "SESSION_LIFETIME": "120",
     "SESSION_ENCRYPT": "false",
     "SESSION_PATH": "/",
     "SESSION_DOMAIN": "null",
+
     "BROADCAST_CONNECTION": "log",
+
     "FILESYSTEM_DISK": "public",
     "QUEUE_CONNECTION": "database",
-    "CACHE_STORE": "array"
+    "CACHE_STORE": "array",
+
+    "APP_CONFIG_CACHE": "/tmp/config.php",
+    "APP_EVENTS_CACHE": "/tmp/events.php",
+    "APP_PACKAGES_CACHE": "/tmp/packages.php",
+    "APP_ROUTES_CACHE": "/tmp/routes.php",
+    "APP_SERVICES_CACHE": "/tmp/services.php",
+    "VIEW_COMPILED_PATH": "/tmp"
   }
 }
