--- a/vercel.json
+++ b/vercel.json
@@ -32,7 +32,7 @@
     "LOG_CHANNEL": "stderr",
     "LOG_LEVEL": "debug",
 
-    "DB_CONNECTION": "postgres",
+    "DB_CONNECTION": "pgsql",
     "DB_HOST": "aws-0-us-east-1.pooler.supabase.com",
     "DB_PORT": "6543",
     "DB_DATABASE": "postgres",
